syntax = "proto3";

option csharp_namespace = "Skua.gRPC.Server";

package main;

import "google/protobuf/empty.proto";

service MainAccount {
    rpc SendCommand (CommandRequest) returns (google.protobuf.Empty);
}

message CommandRequest {
    string command = 1;
}